Added input field for step duration. Fixed bug to properly initialize routines without steps from database.

--- a/hangboard_training_timer/pubspec.yaml
+++ b/hangboard_training_timer/pubspec.yaml
@@ -20,12 +20,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Allows local storage
+  #Allows local storage
   shared_preferences: 0.5.6+3
 
   #Generates unique user id
   uuid: 2.0.4
 
+  #Firebase
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.14.0+5
   firebase_database: 3.1.1
