--- a/hangboard_training_timer/pubspec.yaml
+++ b/hangboard_training_timer/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #Text to Speech
+  flutter_tts: ^0.9.1
+
   #Allows local storage
   shared_preferences: 0.5.6+3
 
@@ -38,6 +41,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # Adds launcher icon
+  flutter_launcher_icons: "^0.7.0"
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path_ios: "assets/launcher/logo.jpg"
+  image_path_android: "assets/launcher/logo.jpg"
 
 
 # For information on the generic Dart part of this file, see the
