--- a/hangboard_training_timer/android/app/src/main/AndroidManifest.xml
+++ b/hangboard_training_timer/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="hangboard_training_timer"
+        android:label="Ti[me]²"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
