--- a/hangboard_training_timer/pubspec.yaml
+++ b/hangboard_training_timer/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   #Text to Speech
   flutter_tts: ^0.9.1
 
+  #Plays audio files
+  audioplayers: ^0.15.1
+
   #Allows local storage
   shared_preferences: 0.5.6+3
 
@@ -58,15 +61,17 @@ flutter_icons:
 # The following section is specific to Flutter.
 flutter:
 
+  # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/launcher/logo.jpg
+    - assets/sound/
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
