--- a/hangboard_training_timer/android/app/src/main/AndroidManifest.xml
+++ b/hangboard_training_timer/android/app/src/main/AndroidManifest.xml
@@ -27,4 +27,9 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+    
+    <uses-permission
+        android:name="android.permission.INTERNET"
+    />
+
 </manifest>
